--- a/website-quality-center/package.json
+++ b/website-quality-center/package.json
@@ -33,6 +33,7 @@
     "@nrwl/linter": "14.0.3",
     "@nrwl/nest": "^14.1.4",
     "@nrwl/node": "14.1.4",
+    "@nrwl/nx-cloud": "^14.0.3",
     "@nrwl/react": "14.0.3",
     "@nrwl/web": "14.0.3",
     "@nrwl/workspace": "14.0.3",
