--- a/website-quality-center/package.json
+++ b/website-quality-center/package.json
@@ -12,6 +12,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^3.14.0",
     "@supabase/supabase-js": "^1.35.2",
     "core-js": "^3.6.5",
     "react": "18.0.0",
